<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">tourPlan-Beta</string>
    <string name="TitleText">TourPlan-Beta</string>
    <string name="emailLabel">E-Mail</string>
    <string name="passLabel">Password</string>
    <string name="SignIn">Sign In</string>
    <string name="to">To:</string>
    <string name="SignUp">Sign Up</string>
    <string name="EmailInput_hint">Enter your e-mail</string>
    <string name="PassInput_hint">Enter your password</string>
    <string name="HelloLabel">"Hello~ "</string>
    <string name="Labm406">http://labm406.serveftp.com/mobile/index.php</string>
    <string name="goWeb">Go to Web version</string>
    <string name="TestButton">Get Something!</string>
    <string name="NewGuy">A new guy? Come here\n for sign up and join us!</string>
    
    <string name="User_dogman">g10049013@thu.edu.tw</string>
    <string name="Pass_dogman">vansttt</string>
    <string name="User_Brack">brack.clare@gmail.com</string>
    <string name="Pass_Brack">dagger</string>
    <string name="searchBotton">GO</string>
    <string name="goOffLine">Offline Mode</string>
    <string name="rememberMe">Remember Me</string>
    <string name="SearchSomething">Do Something~</string><string name="Version">1.0.1</string><string name="VersionName">TourPlan-Beta_v</string>
    <string name="Options">Options</string>
    <string name="Actions">Actions</string>
    <string name="Clear">Clear</string>
    <string name="Retype">Retype</string>
    <string name="UserName">YourName:</string>
    <string name="cache_dirname">tourPlanSaved/imageCache</string>
    <string name="menuHeadline">TourPlan Features</string>
    <string name="RemoveFromPublic">Remove</string>
    <string name="Nearest">Nearest Poi : </string>
</resources>